crates/biome_cli/tests/snapshots/main_cases_multiple_reporters/first_file_then_reporter_name.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --reporter-file=file.json --reporter=rdjson main.ts
```

## `file.json`

```json
{
  "source": {
    "name": "Biome",
    "url": "https://biomejs.dev"
  },
  "diagnostics": [
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-debugger",
        "value": "lint/suspicious/noDebugger"
      },
      "location": {
        "path": "main.ts",
        "range": {
          "end": {
            "column": 9,
            "line": 1
          },
          "start": {
            "column": 1,
            "line": 1
          }
        }
      },
      "message": "This is an unexpected use of the debugger statement.",
      "severity": "ERROR",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 9,
              "line": 1
            },
            "start": {
              "column": 1,
              "line": 1
            }
          },
          "text": ""
        }
      ]
    },
    {
      "code": {
        "value": "format"
      },
      "message": "Formatter would have printed the following content:",
      "severity": "ERROR"
    }
  ]
}
```

## `main.ts`

```ts
debugger
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```
