crates/biome_cli/tests/snapshots/main_cases_multiple_reporters/one_report_to_console_one_to_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --reporter=rdjson --reporter-file=file.json --reporter=default main.ts
```

## `file.json`

```json
{
  "source": {
    "name": "Biome",
    "url": "https://biomejs.dev"
  },
  "diagnostics": [
    {
      "code": {
        "url": "https://biomejs.dev/linter/rules/no-debugger",
        "value": "lint/suspicious/noDebugger"
      },
      "location": {
        "path": "main.ts",
        "range": {
          "end": {
            "column": 9,
            "line": 1
          },
          "start": {
            "column": 1,
            "line": 1
          }
        }
      },
      "message": "This is an unexpected use of the debugger statement.",
      "severity": "ERROR",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 9,
              "line": 1
            },
            "start": {
              "column": 1,
              "line": 1
            }
          },
          "text": ""
        }
      ]
    },
    {
      "code": {
        "value": "format"
      },
      "message": "Formatter would have printed the following content:",
      "severity": "ERROR"
    }
  ]
}
```

## `main.ts`

```ts
debugger
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
main.ts:1:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
  > 1 │ debugger
      │ ^^^^^^^^
  
  i Unsafe fix: Remove debugger statement
  
    1 │ debugger
      │ --------

```

```block
main.ts format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - debugger
      1 │ + debugger;
      2 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
