crates/biome_cli/tests/snapshots/main_cases_multiple_reporters/only_report_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --reporter-file=file.txt main.ts
```

## `file.txt`

```txt
main.ts:1:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ✖ This is an unexpected use of the debugger statement.
  
  > 1 │ debugger
      │ ^^^^^^^^
  
  ℹ Unsafe fix: Remove debugger statement
  
    1 │ debugger
      │ --------
main.ts format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ✖ Formatter would have printed the following content:
  
    1   │ - debugger
      1 │ + debugger;
      2 │ + 
  
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```

## `main.ts`

```ts
debugger
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```
